--- a/qof/.cvsignore
+++ b/qof/.cvsignore
@@ -3,16 +3,21 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+config.guess
 config.h.in
 config.log
 config.status
+config.sub
+depcomp
 install-sh
 intltool-extract.in
 intltool-merge.in
 intltool-update.in
 libtool
+ltmain.sh
 missing
 mkinstalldirs
+stamp-h1
 stamp-h.in
 config.h
 intltool-extract
