--- a/qof/configure.in
+++ b/qof/configure.in
@@ -1,5 +1,5 @@
 AC_INIT(src)
-AM_INIT_AUTOMAKE(qof, 0.1.0)
+AM_INIT_AUTOMAKE(qof, 0.2.0)
 
 AC_PROG_INTLTOOL
 
@@ -89,8 +89,9 @@ dnl <= Prefixes =>
 echo "prefix : $prefix"
 # echo "sysconf dir : "`eval echo $sysconfdir`
 echo "bin dir : "`eval echo $bindir`
-# echo "sbin dir : "`eval echo $sbindir`
 echo "data dir : "`eval echo $datadir`
+echo "include dir : "`eval echo $includedir`
+echo "lib dir : "`eval echo $libdir`
 echo ""
 
 
