--- a/qof/configure.in
+++ b/qof/configure.in
@@ -25,7 +25,7 @@ dnl *****************************************
 dnl pkg-config check time
 dnl *****************************************
 
-AM_PATH_GLIB
+AM_PATH_GLIB_2_0
 
 dnl **************************************************************
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -55,7 +55,7 @@ dnl Internationalization
 dnl ******************************* 
 
 ALL_LINGUAS=" "
-GETTEXT_PACKAGE=qof-0.1
+GETTEXT_PACKAGE=qof-0.2
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
 
