split up the example into three pieces

--- a/qof/examples/Makefile.am
+++ b/qof/examples/Makefile.am
@@ -1,4 +1,15 @@
 
+query_example_SOURCES = \
+	my-object.c          \
+	query-example.c
+
+noinst_PROGRAMS = \
+	query-example
+
+EXTRA_DIST =                   \
+    .cvsignore
+
+
 AM_CFLAGS = \
   -I${top_srcdir}/src \
   ${GLIB_CFLAGS}
@@ -8,11 +19,4 @@ LDADD = \
   ${top_builddir}/src/libqof.la \
   ${GLIB_LIBS} \
   -lltdl -lm
-
-noinst_PROGRAMS = \
-	query-example
-
-
-EXTRA_DIST =                   \
-    .cvsignore
 
