add new example to the set

--- a/qof/examples/Makefile.am
+++ b/qof/examples/Makefile.am
@@ -1,10 +1,15 @@
 
 query_example_SOURCES = \
-	my-object.c          \
-	query-example.c
+	query-example.c      \
+	my-object.c 
+
+sql_example_SOURCES = \
+	sql-example.c      \
+	my-object.c 
 
 noinst_PROGRAMS = \
-	query-example
+	query-example  \
+	sql-example
 
 EXTRA_DIST =                   \
     .cvsignore
@@ -17,6 +22,7 @@ AM_CFLAGS = \
 
 LDADD = \
   ${top_builddir}/src/libqof.la \
+  ${top_builddir}/lib/libsql/libqofsql.la \
   ${GLIB_LIBS} \
   -lltdl -lm
 
