start fleshing out

--- a/qof/examples/gobject/Makefile
+++ b/qof/examples/gobject/Makefile
@@ -3,7 +3,10 @@
 all: qofgobj
 
 
-INCLUDES= `pkg-config --cflags glib-2.0 gobject-2.0 gtk+-2.0`
+INCLUDES= \
+	-I ../../src \
+	`pkg-config --cflags glib-2.0 gobject-2.0 gtk+-2.0` 
+
 LIBS= `pkg-config --libs glib-2.0 gobject-2.0 gtk+-2.0`
 
 qofgobj: qofgobj.o
