--- a/qof/examples/gobject/Makefile
+++ b/qof/examples/gobject/Makefile
@@ -7,7 +7,10 @@ INCLUDES= \
 	-I ../../src \
 	`pkg-config --cflags glib-2.0 gobject-2.0 gtk+-2.0` 
 
-LIBS= `pkg-config --libs glib-2.0 gobject-2.0 gtk+-2.0`
+LIBS= \
+	-L ../../src -lqof \
+	-L ../../lib/libsql -lqofsql \
+	`pkg-config --libs glib-2.0 gobject-2.0 gtk+-2.0`
 
 qofgobj: qofgobj.o
 
