--- a/qof/configure.in
+++ b/qof/configure.in
@@ -1,5 +1,5 @@
 AC_INIT(src)
-AM_INIT_AUTOMAKE(qof, 0.4.0)
+AM_INIT_AUTOMAKE(qof, 0.4.1)
 
 AC_PROG_INTLTOOL
 
@@ -25,7 +25,16 @@ dnl *****************************************
 dnl pkg-config check time
 dnl *****************************************
 
-AM_PATH_GLIB_2_0
+AM_PATH_GLIB_2_0("2.0.0", , ,gobject)
+
+dnl **************************************************************
+dnl stuff needed to build the example progs only ... 
+dnl **************************************************************
+
+GTK_CFLAGS=`$PKG_CONFIG --cflags gtk+-2.0`
+GTK_LIBS=`$PKG_CONFIG --libs gtk+-2.0`
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
 
 dnl **************************************************************
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -70,6 +79,7 @@ AC_SUBST(LDFLAGS)
 AC_OUTPUT([
 Makefile
 examples/Makefile
+examples/gobject/Makefile
 lib/Makefile
 lib/libsql/Makefile
 src/Makefile
