use pkg-config to get library info. use library versioning to umm, solve compatibility problems ??

--- a/qof/Makefile.am
+++ b/qof/Makefile.am
@@ -1,5 +1,10 @@
-
+#
+# Makefile.am for libqof
+#
 SUBDIRS = lib src examples
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = qof-0.pc
 
 EXTRA_DIST =                   \
 	.cvsignore                  \
