--- a/qof/lib/libsql/Makefile.am
+++ b/qof/lib/libsql/Makefile.am
@@ -2,6 +2,8 @@
 
 lib_LTLIBRARIES = libqofsql.la
 
+libqofsql_la_LDFLAGS= -version-info $(LIBQOFSQL_LIBRARY_VERSION) -release $(VERSION) 
+
 libqofsql_la_SOURCES = \
 	parser.c \
 	parser.h \
