--- a/qof/configure.in
+++ b/qof/configure.in
@@ -1,9 +1,13 @@
-dnl ***************************************************
-dnl
-dnl configure.in for the QOF package
-dnl
-dnl Linas Vepstas April 2004
-dnl ***************************************************
+## -*-m4-*-
+
+dnl Process this file with autoconf to produce a configure script.
+
+# FILE:
+# configure.in for the QOF package
+#
+# FUNCTION:
+# implements checks for a variety of system-specific functions
+#
 
 AC_INIT(src)
 AM_INIT_AUTOMAKE(qof,0.4.2)
@@ -97,6 +101,48 @@ AM_GLIB_GNU_GETTEXT
 
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
 		[Define the gettext package.])
+
+# check for doxygen, mostly stolen from http://log4cpp.sourceforge.net/
+# ----------------------------------------------------------------------------
+AC_DEFUN(BB_ENABLE_DOXYGEN,
+[
+AC_ARG_ENABLE(doxygen, [  --enable-doxygen        enable documentation generation with doxygen (auto)])
+AC_ARG_ENABLE(dot, [  --enable-dot            use 'dot' to generate graphs in doxygen (auto)])              
+AC_ARG_ENABLE(html-docs, [  --enable-html-docs      enable HTML generation with doxygen (yes)], [], [ enable_html_docs=yes])              
+AC_ARG_ENABLE(latex-docs, [  --enable-latex-docs     enable LaTeX documentation generation with doxygen (no)], [], [ enable_latex_docs=no])              
+if test "x$enable_doxygen" = xno; then
+        enable_doc=no
+else 
+        AC_PATH_PROG(DOXYGEN, doxygen, , $PATH)
+        if test x$DOXYGEN = x; then
+                if test "x$enable_doxygen" = xyes; then
+                        AC_MSG_ERROR([could not find doxygen])
+                fi
+                enable_doc=no
+        else
+                enable_doc=yes
+                AC_PATH_PROG(DOT, dot, , $PATH)
+        fi
+fi
+AM_CONDITIONAL(DOC, test x$enable_doc = xyes)
+
+if test x$DOT = x; then
+        if test "x$enable_dot" = xyes; then
+                AC_MSG_ERROR([could not find dot])
+        fi
+        enable_dot=no
+else
+        enable_dot=yes
+fi
+AM_CONDITIONAL(ENABLE_DOXYGEN, test x$enable_doc = xtrue)
+AC_SUBST(enable_dot)
+AC_SUBST(enable_html_docs)
+AC_SUBST(enable_latex_docs)
+])
+
+# check for doxygen
+BB_ENABLE_DOXYGEN
+# ----------------------------------------------------------------------------
 
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
