first cut at a dwi makefile

--- a/qof/lib/dwi/Makefile.am
+++ b/qof/lib/dwi/Makefile.am
@@ -2,22 +2,32 @@
 
 lib_LTLIBRARIES = libdwi.la
 
-libdwi_la_LDFLAGS= -version-info $(LIBDWI_LIBRARY_VERSION) -release $(VERSION) 
+# libdwi_la_LDFLAGS= -version-info $(LIBDWI_LIBRARY_VERSION) -release $(VERSION) 
 
 libdwi_la_SOURCES = \
-	duifield.c \
-	duifieldmap.c \
-	duifield-qof.c 
+	duifield.c       \
+	duifield-qof.c   \
+	duifield-sql.c   \
+	duifieldmap.c    \
+	duifilter.c      \
+	duiresolver.c    \
+	duitxnquery.c    \
+	duitxnreport.c 
 
 dwiincludedir = ${pkgincludedir}
 dwiinclude_HEADERS = \
-	duifield.h 
-
-noinst_PROGRAMS = sql_parse_test
+	duifield.h       \
+	duifield-qof.h   \
+	duifield-sql.h   \
+	duifieldmap.h    \
+	duifilter.h      \
+	duiresolver.h    \
+	duitxnquery.h    \
+	duitxnreport.h 
 
 EXTRA_DIST =       \
 	.cvsignore      \
-	README          \
+	README
 
 AM_CFLAGS = -g     \
 	@CFLAGS@        \
