initial stab at a functional makefile

--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -1,6 +1,7 @@
 
 SUBDIRS =  dwi
  
-EXTRA_DIST =                   \
-        README
+EXTRA_DIST =             \
+	.cvsignore            \
+	README
 
