--- a/qof/configure.in
+++ b/qof/configure.in
@@ -10,7 +10,7 @@ dnl Process this file with autoconf to produce a configure script.
 #
 
 AC_INIT(src)
-AM_INIT_AUTOMAKE(qof,0.5.0)
+AM_INIT_AUTOMAKE(qof,0.5.1)
 
 LIBQOF_LIBRARY_VERSION=1:0:0
 LIBQOFSQL_LIBRARY_VERSION=1:0:0
@@ -150,10 +150,13 @@ AC_SUBST(LDFLAGS)
 
 AC_OUTPUT([
 Makefile
+backend/Makefile
+backend/dwi/Makefile
 doc/Makefile
 examples/Makefile
 examples/gobject/Makefile
 lib/Makefile
+lib/dwi/Makefile
 lib/libsql/Makefile
 src/Makefile
 qof-0.pc
