move the files from src to qof directory

--- a/qof/examples/Makefile.am
+++ b/qof/examples/Makefile.am
@@ -23,15 +23,15 @@ EXTRA_DIST =     \
     .cvsignore
 
 
-AM_CFLAGS = \
+AM_CFLAGS =           \
   -I${top_srcdir}/src \
   ${GLIB_CFLAGS}
 
 
-LDADD = \
-  ${top_builddir}/src/libqof.la \
+LDADD =                                   \
+  ${top_builddir}/qof/libqof.la           \
   ${top_builddir}/lib/libsql/libqofsql.la \
-  ${LIBXML2_LIBS} \
-  ${GLIB_LIBS} \
+  ${LIBXML2_LIBS}                         \
+  ${GLIB_LIBS}                            \
   -lltdl -lm
 
