--- a/qof/examples/gobject/Makefile.am
+++ b/qof/examples/gobject/Makefile.am
@@ -2,22 +2,22 @@
 gobj_example_SOURCES = \
 	gobj-example.c 
 
-noinst_PROGRAMS = \
+noinst_PROGRAMS =     \
 	gobj-example 
 
-EXTRA_DIST =                   \
+EXTRA_DIST =          \
     .cvsignore
 
-AM_CFLAGS = \
+AM_CFLAGS =           \
   -I${top_srcdir}/src \
-  ${GTK_CFLAGS} \
+  ${GTK_CFLAGS}       \
   ${GLIB_CFLAGS}
 
-LDADD = \
-  ${top_builddir}/src/libqof.la \
+LDADD =                                   \
+  ${top_builddir}/qof/libqof.la           \
   ${top_builddir}/lib/libsql/libqofsql.la \
-  ${GTK_LIBS} \
-  ${LIBXML2_LIBS} \
-  ${GLIB_LIBS} \
+  ${GTK_LIBS}                             \
+  ${LIBXML2_LIBS}                         \
+  ${GLIB_LIBS}                            \
   -lltdl -lm
 
