--- a/qof/configure.in
+++ b/qof/configure.in
@@ -9,7 +9,7 @@ dnl Process this file with autoconf to produce a configure script.
 # implements checks for a variety of system-specific functions
 #
 
-AC_INIT(src)
+AC_INIT(qof)
 AM_INIT_AUTOMAKE(qof,0.5.1)
 
 LIBQOF_LIBRARY_VERSION=1:0:0
@@ -154,6 +154,7 @@ backend/Makefile
 backend/dwi/Makefile
 doc/Makefile
 examples/Makefile
+examples/backend/Makefile
 examples/gobject/Makefile
 lib/Makefile
 lib/dwi/Makefile
