add the 128-bit math lib as a separate lib, for now

--- a/qof/qof/Makefile.am
+++ b/qof/qof/Makefile.am
@@ -58,6 +58,7 @@ qofinclude_HEADERS = \
    qofinstance.h     \
    qofquery.h        \
    qofbook.h         \
+   qofmath128.c      \
    qofobject.h       \
    qofquerycore.h    \
    qofquery-deserial.h     \
