build DWI only if it is detected

--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -1,5 +1,23 @@
+#
+# FILE:
+# Makefile.am
+#
+# FUNCTION:
+# QOF backend builder
+#
+# HISTORY:
+# Created by Linas Vepstas <linas@linas.org> July 2004
+#
 
-SUBDIRS =  dwi
+if BUILD_DWI
+DWIBE=dwi
+else
+DWIBE=
+endif
+
+SUBDIRS = $(DWIBE)
+
+DIST_SUBDIRS =  dwi
  
 EXTRA_DIST =             \
 	.cvsignore            \
