--- a/qof/configure.in
+++ b/qof/configure.in
@@ -10,7 +10,7 @@ dnl Process this file with autoconf to produce a configure script.
 #
 
 AC_INIT(qof)
-AM_INIT_AUTOMAKE(qof,0.5.1)
+AM_INIT_AUTOMAKE(qof,0.5.2)
 
 LIBQOF_LIBRARY_VERSION=1:0:0
 LIBQOFSQL_LIBRARY_VERSION=1:0:0
@@ -101,6 +101,17 @@ AM_GLIB_GNU_GETTEXT
 
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
 		[Define the gettext package.])
+
+dnl **************************************************************
+dnl If DWI is found on the build system, then build with it.
+dnl Need to check for libdwi-qof too .... 
+dnl **************************************************************
+
+AC_CHECK_LIB(dwi,dui_field_set_sql,
+              AC_DEFINE(HAVE_DWI,,We Have Found DWI),
+              AC_MSG_WARN([****** DWI not found; can't use the DWI backend.]),)
+
+AM_CONDITIONAL(BUILD_DWI, [test x$HAVE_DWI = x])
 
 # check for doxygen, mostly stolen from http://log4cpp.sourceforge.net/
 # ----------------------------------------------------------------------------
