fixes for separately-installable dwi

--- a/qof/backend/dwi/Makefile.am
+++ b/qof/backend/dwi/Makefile.am
@@ -7,7 +7,7 @@ lib_LTLIBRARIES = libqof_backend_dwi.la
 libqof_backend_dwi_la_LDFLAGS= -version-info $(LIBQOF_LIBRARY_VERSION)  
 
 # libqof_backend_dwi_la_LIBADD= libdwi.so
-LIBS = -ldwi
+LIBS = $(DWI_LIBS)
 
 libqof_backend_dwi_la_SOURCES = \
 	dwi-backend.c                \
@@ -26,7 +26,5 @@ AM_CFLAGS = -g     \
 	@CFLAGS@        \
 	@GLIB_CFLAGS@
 
-INCLUDES = \
-	-I../../lib
 
 
