adding qof_book_merge code and example program

--- a/qof/examples/Makefile.am
+++ b/qof/examples/Makefile.am
@@ -4,6 +4,8 @@
 
 SUBDIRS = gobject
 
+test_book_merge_SOURCES = test-book-merge.c
+
 query_example_SOURCES = \
 	query-example.c      \
 	my-object.c 
@@ -13,6 +15,7 @@ sql_example_SOURCES = \
 	my-object.c 
 
 noinst_PROGRAMS = \
+	test-book-merge \
 	query-example  \
 	sql-example
 
@@ -30,6 +33,7 @@ AM_CFLAGS =           \
 
 LDADD =                                   \
   ${top_builddir}/qof/libqof.la           \
+  ${top_builddir}/qof/qof_book_merge.lo  \
   ${top_builddir}/lib/libsql/libqofsql.la \
   ${LIBXML2_LIBS}                         \
   ${GLIB_LIBS}                            \
