adding qof_book_merge.h to installed headers

--- a/qof/qof/Makefile.am
+++ b/qof/qof/Makefile.am
@@ -68,7 +68,8 @@ qofinclude_HEADERS = \
    qofquery-deserial.h     \
    qofquery-serialize.h    \
    qofsession.h      \
-   qofsql.h
+   qofsql.h	     \
+   qof_book_merge.h
 
 
 noinst_HEADERS =      \
