Added first release of QSF file backend

--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -7,7 +7,7 @@
 #
 # HISTORY:
 # Created by Linas Vepstas <linas@linas.org> July 2004
-#
+# QSF File backend added Neil Williams <linux@codehelp.co.uk> Jan 05
 
 if BUILD_DWI
 DWIBE=dwi
@@ -15,9 +15,9 @@ else
 DWIBE=
 endif
 
-SUBDIRS = $(DWIBE)
+SUBDIRS = $(DWIBE) file
 
-DIST_SUBDIRS =  dwi
+DIST_SUBDIRS =  dwi file
  
 EXTRA_DIST =             \
 	.cvsignore            \
