Reference handling, UTC date and time and INSERT handling

--- a/qof/qof/Makefile.am
+++ b/qof/qof/Makefile.am
@@ -89,7 +89,7 @@ AM_CFLAGS = -g        \
    ${GLIB_CFLAGS}
 
 INCLUDES =                     \
-   -I../lib                    \
+   -I../lib/libsql             \
    -I$(includedir)             \
    -DPREFIX=\""$(prefix)"\"    \
    -DDATADIR=\""$(datadir)"\" 
