--- a/qof/configure.in
+++ b/qof/configure.in
@@ -9,13 +9,18 @@ dnl Process this file with autoconf to produce a configure script.
 # implements checks for a variety of system-specific functions
 #
 
-AC_INIT(qof)
-AM_INIT_AUTOMAKE(qof,0.5.2)
+AC_INIT(qof,0.5.2)
+AM_INIT_AUTOMAKE
 
 LIBQOF_LIBRARY_VERSION=1:0:0
 LIBQOFSQL_LIBRARY_VERSION=1:0:0
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOFSQL_LIBRARY_VERSION)
+
+VERSION=0.5.2
+AC_SUBST(VERSION)
+PACKAGE=qof
+AC_SUBST(PACKAGE)
 
 AC_PROG_INTLTOOL
 
@@ -207,8 +212,6 @@ qof/Makefile
 qof-0.pc
 qof-config
 ])
-
-ln -sf ${srcdir} qof/qof
 
 dnl <= Configuration summary =>
 
